use json serialized message

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ DATABASE_URL="postgresql://user:password@postgres:5432/adventurer?serverVersion=
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
-MESSENGER_TRANSPORT_DSN_FAILURE=doctrine://default?queue_name=failed
+MESSENGER_TRANSPORT_DSN_FAILURE=amqp://guest:guest@rabbitmq:5672/%2f/failed
 MESSENGER_TRANSPORT_DSN_LATITUDE_LINE=amqp://guest:guest@rabbitmq:5672/%2f/latitude_line
 MESSENGER_TRANSPORT_DSN_GPS_COORDINATES=amqp://guest:guest@rabbitmq:5672/%2f/gps_coordinates
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
