--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,5 +1,7 @@
 framework:
     messenger:
+        serializer:
+            default_serializer: messenger.transport.symfony_serializer
         # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
         failure_transport: failed
 
